--- a/themes/etch/layouts/shortcodes/logo.html
+++ b/themes/etch/layouts/shortcodes/logo.html
@@ -1,6 +1,6 @@
 <style>
 body {
-  background-image: url('/img/paranova-yellow.jpg');
+  background-image: url('/img/paranova-dark.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
